# ds-console-bot-helper

./: Dockerfile  README.md  pyproject.toml
project/: functionality_for_bot.py  main.py
