[tool.poetry]
name = "ds_console_bot_helper"
version = "0.1.2"
description = "Console bot helper (2.0) that recognizes commands entered from the keyboard, and responds according to the entered command."
authors = ["data-tamer2410 <vitaliy.dayneko2410@gmail.com>"]
readme = 'README.md'
packages = [{include='project'}]

[tool.poetry.dependencies]
python = "~3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
